fixed relative path

--- a/notebooks/DM_redshift.ipynb
+++ b/notebooks/DM_redshift.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "88537a6f-85ce-412d-9426-cfb0ebd013e4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "134c831f-4259-48ff-8860-24fa7240a5f3",
    "metadata": {},
    "outputs": [],
