--- a/notebooks/get_good_pixels.ipynb
+++ b/notebooks/get_good_pixels.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "180130e9-b239-4783-9bf3-ccb488692347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "16528397-b4bd-4cf6-ba9a-6fd9f988f41a",
    "metadata": {
