getting galaxy cone is now split into two methods, flat sky and hp pixels

--- a/notebooks/get_good_pixels.ipynb
+++ b/notebooks/get_good_pixels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "180130e9-b239-4783-9bf3-ccb488692347",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "16528397-b4bd-4cf6-ba9a-6fd9f988f41a",
    "metadata": {
     "tags": []
@@ -28,12 +28,13 @@
     "from illustris_frb import frb_simulation\n",
     "import time\n",
     "\n",
-    "figpath = '/home/tnguser/frb_project/figures'"
+    "figpath = '/home/tnguser/frb_project/figures'\n",
+    "gcat_dir = '/home/tnguser/frb_project/data/g_cats'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "76c8ed91-dc09-41be-bfea-06f87a72586d",
    "metadata": {
     "tags": []
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "ddcfdff0-4f8c-42da-adaa-3bb1ca4972f8",
    "metadata": {
     "tags": []
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "2543fc5c-b201-42d4-bb70-5c107555f8b2",
    "metadata": {
     "tags": []
@@ -87,6 +88,33 @@
    "source": [
     "# estimate angular distance between consecutive bad rays (lower bound), in degrees\n",
     "print(f'Lower bound on angular distance between consecutive bad rays: {np.degrees(np.arcsin(sim.boxsize / x)):.2f} deg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6cf8aab2-3f7b-4249-973f-fba28075f87d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate resolution at nside 512 is 6.9'\n",
+      "Number of pixels: 3145728\n"
+     ]
+    }
+   ],
+   "source": [
+    "# npix corresponding to this angular scale\n",
+    "nside = 512\n",
+    "print(f\"Approximate resolution at nside {nside} is {hp.nside2resol(nside, arcmin=True):.1f}\\'\")\n",
+    "\n",
+    "npix = hp.nside2npix(nside)\n",
+    "pixels = np.arange(npix)\n",
+    "print(f\"Number of pixels: {npix}\")"
    ]
   },
   {
@@ -608,9 +636,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9703ffcf-6f48-4b65-843b-aff73f3d167f",
+   "metadata": {},
+   "source": [
+    "### get pixels for our first test region"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a325f68-28c8-4359-8dc9-2f2415c50525",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "theta_min = np.pi/2 - 0.19\n",
+    "theta_max = np.pi/2 + 0.19\n",
+    "phi_min = 0.01\n",
+    "phi_max = 0.19 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b4319cc4-96a2-4ff2-bf0c-ad2fe9b39a64",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nside = 32\n",
+    "r = hp.max_pixrad(nside) #radius of pixel in radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eb644038-dc49-4666-ac1a-d79f96753944",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5185, 5186, 5187, 5313, 5314, 5441, 5442, 5443, 5569, 5570, 5697,\n",
+       "       5698, 5699, 5825, 5826, 5953, 5954, 5955, 6081, 6082, 6209, 6210,\n",
+       "       6211, 6337, 6338, 6465, 6466, 6467, 6593, 6594, 6721, 6722, 6723,\n",
+       "       6849, 6850, 6977, 6978, 6979])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get all pixels in this box\n",
+    "pixels = hp.query_strip(nside, theta_min+r, theta_max-r)\n",
+    "thetas, phis = hp.pix2ang(nside, pixels)\n",
+    "mask = (phi_min+r < phis) & (phis < phi_max-r)\n",
+    "\n",
+    "pixels = pixels[mask]\n",
+    "np.save(os.path.join(gcat_dir, f'test_pixels_nside{nside}'), pixels)\n",
+    "pixels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9ff247-5882-4831-b0fe-4922195bf3cf",
+   "id": "b83e3a93-5344-481b-aa69-acfaa61bc269",
    "metadata": {},
    "outputs": [],
    "source": []
