added rotations, moved galaxy catalog script into illustris_frb module

--- a/notebooks/xcorr_flatsky.ipynb
+++ b/notebooks/xcorr_flatsky.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c9ac93d-3a43-4db1-9e1f-2ac2f0c84509",
    "metadata": {
     "tags": []
@@ -10,7 +10,18 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')"
+    "sys.path.append('../')\n",
+    "from illustris_frb import frb_simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "abbbceb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim = frb_simulation(origin=np.zeros(3))"
    ]
   },
   {
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "add248c8-83a6-4d0d-a6d4-88881dc5a072",
    "metadata": {
     "tags": []
