fixed bugs where host DM was added before selection effects, and wrong values of the lognormal were used

--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,26 +473,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0002"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/5000"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -671,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### host DM"
+    "### host DM - NEED TO REDO THIS SECTION I INPUTTED THE WRONG VALUES"
    ]
   },
   {
